<resources>
    <string name="app_name">Maths Learn</string>
    <string name="accueil">Accueil</string>
    <string name="credits">Léo Kemplaire - ISI4 - Tous droits réservés</string>
    <string name="bienvenue">Bienvenue moussaillon !</string>
    <string name="choisir">Choisis une méthode d\'authentification pour débuter ton aventure !</string>
    <string name="invite_btn">Mode invité</string>
    <string name="recommencer_btn">Recommencer</string>
    <string name="table_title">Table du </string>
    <string name="retour_accueil">Revenir à l accueil</string>
    <string name="inscription_btn">Inscription</string>
    <string name="inscription_title">Inscription</string>
    <string name="pseudo_instruction">Entre ton pseudo</string>
    <string name="age_instruction">Entre ton âge</string>
    <string name="inscription_warning">En cliquant sur valider, j accepte que certaines informations (mon pseudonyme, mon âge) soient enregistrés. Si tu es mineur, pense à demander à tes parents.</string>
    <string name="code_instruction">Entre ton code</string>
    <string name="code_invalide">Code invalide ! Veuillez réessayer.</string>
    <string name="choisi_exercice_instruction">Clique sur l exercice que tu veux faire !</string>
    <string name="tous_scores_title">Tous mes scores</string>
    <string name="liste_users_title">Liste des utilisateurs</string>
    <string name="liste_users_instruction">Clique sur ton profil pour commencer à jouer avec !</string>
    <string name="user_choice_btn">Choix utilisateur</string>
    <string name="choix_rubrique">Choisis la rubrique à laquelle tu souhaites accéder !</string>
    <string name="exos_debutant_title">JEUX DEBUTANT</string>
    <string name="exos_confirme_title">JEUX CONFIRME</string>
    <string name="exos_debutant">Exercices débutant</string>
    <string name="exos_confirme">Exercices confirmés</string>
    <string name="stats_title">STATISTIQUES</string>
    <string name="exercices_menu">Exercices</string>
    <string name="stats_infosgenerales">Informations générales</string>
    <string name="stats_voir_tousscores">Voir tous mes scores</string>
    <string name="stats_5_derniersscores">Mes 5 derniers scores</string>
    <string name="stats_perc_victoire">% de victoire : </string>
    <string name="stats_parties_gagnees">Parties gagnées : </string>
    <string name="stats_parties_jouees">Parties jouées : </string>
    <string name="resultats_partie_title">Résultats du jeu</string>
    <string name="infos_partie">Informations sur la partie : </string>
    <string name="time">Temps réalisé : </string>
    <string name="statistiques">Mes statistiques</string>
    <string name="espace_user_title">ESPACE UTILISATEUR</string>
    <string name="espace_user">Espace utilisateur</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="connexion">Connexion</string>
    <string name="additions_classiques_title">Additions classiques</string>
    <string name="btn_retour">Précédent</string>
    <string name="btn_suivant">Suivant</string>
    <string name="aide_title">Aide</string>
    <string name="jaicompris_btn">J ai compris</string>
    <string name="choisis_table">Choisis ta table de multiplication</string>
    <string name="btn_valider">Valider</string>
    <string name="delete_compte">Supprimer mon compte</string>
    <string name="prendre_photo">Prendre une photo</string>
    <string name="photo_profil">Photo de profil</string>
    <string name="age">Age</string>
    <string name="password">Code</string>
    <string name="pseudonyme">Pseudo</string>
    <string name="infos_perso">Informations personnelles</string>
    <string name="param_exo">Paramètres de l exercice</string>
    <string name="taille_nombres">Taille des nombres</string>
</resources>