<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".View.EspaceUtilisateurActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/espace_user"
        android:textColor="@color/colorPrimary"
        android:textSize="38dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="7dp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infos_perso"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="97dp"
            android:layout_height="41dp"
            android:text="@string/pseudonyme"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_pseudo"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="97dp"
            android:layout_height="41dp"
            android:text="@string/password"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="234dp"
        android:layout_height="81dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="20sp"
            android:textStyle="italic" />

        <NumberPicker
            android:id="@+id/age_np"
            android:layout_width="91dp"
            android:layout_height="81dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/photo_profil"
        android:layout_marginBottom="20dp"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="267dp"
            android:layout_height="101dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photo_profil"
                android:layout_width="44dp"
                android:layout_height="94dp"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_startcamera"
                android:layout_width="96dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/prendre_photo" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_delete_compte"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_compte" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_valider"
            android:layout_width="167dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/btn_valider" />

        <Button
            android:id="@+id/btn_retour"
            android:layout_width="187dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:text="@string/btn_retour" />

    </LinearLayout>

</LinearLayout>