<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".View.ResultatExerciceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultats_partie_title"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/infos_partie"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text=""
            android:textSize="24dp" />

        <TextView
            android:id="@+id/temps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_retour_accueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour_accueil"
            />

        <Button
            android:id="@+id/btn_recommencer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommencer_btn"
            />

    </LinearLayout>

</LinearLayout>