<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".View.ExerciceParametersActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/param_exo"
        android:textSize="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="50dp"

        />

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="126dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/taille_nombres"
            android:textSize="24sp"
            android:textStyle="italic" />

        <RadioGroup
            android:id="@+id/choix_taille"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="399dp"
                android:layout_height="65dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="1 - 10" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="399dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="10 - 100" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="399dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="100 - 1000" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_valider"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:text="@string/btn_valider" />

        <Button
            android:id="@+id/btn_retour"
            android:layout_width="205dp"
            android:layout_height="60dp"
            android:text="@string/btn_retour" />

    </LinearLayout>

</LinearLayout>